Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/defaultMethods/Neg15.out
Neg15.java:12:31: compiler.err.illegal.default.super.call: Neg15.K, (compiler.misc.overridden.default: m(), Neg15.J)
1 error
